--- a/composer.json
+++ b/composer.json
@@ -3,8 +3,8 @@
 	"description": "qr code payment utility",
 	"type": "library",
 	"require" : {
-		"tecnick.com/tcpdf": "*",
-		"setasign/fpdi": "*",
+		"tecnick.com/tcpdf": "dev-master",
+		"setasign/fpdi": "dev-master",
 		"gchartphp/gchartphp": "dev-master"
 	},
 	"autoload": {
