--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
 	"type": "library",
 	"require" : {
 		"tecnick.com/tcpdf": "6.*",
-		"setasign/fpdi": "dev-master",
+		"setasign/fpdi": "1.*",
 		"gchartphp/gchartphp": "dev-master"
 	},
 	"autoload": {
