--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
 	"require" : {
 		"tecnick.com/tcpdf": "6.*",
 		"setasign/fpdi": "1.*",
-		"gchartphp/gchartphp": "dev-master"
+		"gchartphp/gchartphp": "@dev"
 	},
 	"autoload": {
 		"psr-4": {
