--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
 	"description": "qr code payment utility",
 	"type": "library",
 	"require" : {
-		"gchartphp/gchartphp": "@stable"
+		"curl/curl": "@stable"
 	},
 	"autoload": {
 		"psr-4": {
