--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-	"name": "jabli/jerapah",
+	"name": "criq/jerapah",
 	"description": "qr code payment utility",
 	"type": "library",
 	"require" : {
